<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MoreActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="327dp"
        android:layout_height="35dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="84dp"
        android:text="@string/m_i_th_ng_tin_xin_li_n_h_www_nowebsitehere_com"
        android:textAlignment="textStart"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="327dp"
        android:layout_height="35dp"
        android:layout_marginStart="44dp"
        android:text="@string/ch_u_tr_ch_nhi_m_n_i_dung_mai_vi_t_th_c"
        android:textAlignment="textStart"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="327dp"
        android:layout_height="35dp"
        android:layout_marginStart="44dp"
        android:text="@string/h_p_th_i_n_t_noemailexist_gmail_com"
        android:textAlignment="textStart"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="326dp"
        android:layout_height="68dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="72dp"
        android:text="@string/mvt_calculator_1_0"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>